--- a/src/client/components/dimension-list-tile/dimension-list-tile.scss
+++ b/src/client/components/dimension-list-tile/dimension-list-tile.scss
@@ -14,7 +14,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 @import '../../imports';
 
 $icon-width: 37px;
@@ -30,48 +29,6 @@ $icon-width: 37px;
         &:last-child {
           margin-bottom: $searchable-folder-last-child-margin;
         }
-      }
-    }
-
-    .dimension {
-      background: $white;
-      cursor: pointer;
-      overflow: hidden;
-      padding-left: 14px;
-      height: $dimension-height;
-      //transition: transform 0.1s ease-in-out;
-
-      &:last-child {
-        margin-bottom: $searchable-tile-last-child-margin;
-      }
-
-      &:hover {
-        background: $hover;
-      }
-
-      &.selected {
-        background: $highlight;
-      }
-
-      .icon {
-        top: 4px;
-        left: -2px;
-        width: 19px;
-        float: left;
-
-        svg {
-          width: 19px;
-
-          path {
-            fill: hsla(0, 0, 0, 0.35);
-          }
-        }
-      }
-
-      .label {
-        @include ellipsis;
-        display: block;
-        padding: 7px 0.15em;
       }
     }
   }
