--- a/src/client/components/searchable-tile/searchable-folder.scss
+++ b/src/client/components/searchable-tile/searchable-folder.scss
@@ -13,10 +13,64 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import '../../utils/styles/default-info-bubble-position';
+@import '../../imports';
 
-.info-bubble {
-  @extend %default-info-bubble-position;
+.folder {
+  .folder-header {
+    background: $white;
+    cursor: pointer;
+    overflow: hidden;
+    padding-left: 14px;
+    height: $dimension-height;
+    display: flex;
+
+    &:hover {
+      background: $hover;
+    }
+
+    .label {
+      @include ellipsis;
+      flex-grow: 1;
+      min-width: 0;
+      display: block;
+      padding: 7px 0.15em;
+    }
+
+    .folder-icon {
+      top: 4px;
+      left: -2px;
+      width: 19px;
+      float: left;
+
+      svg {
+        width: 19px;
+
+        path {
+          fill: hsla(0, 0, 0, 0.35);
+        }
+      }
+    }
+
+    .info-icon {
+      flex-shrink: 0;
+      top: 4px;
+      right: 3px;
+      height: 19px;
+      @extend %hoverable-icon;
+    }
+  }
+
+  .folder-items {
+    padding-left: 22px;
+
+    .row {
+      &:last-child {
+        margin-bottom: $searchable-folder-last-child-margin;
+      }
+    }
+  }
+
+  .closed {
+    display: none;
+  }
 }
-
-
