--- a/src/client/components/searchable-tile/searchable-tile.scss
+++ b/src/client/components/searchable-tile/searchable-tile.scss
@@ -73,54 +73,6 @@ $search-box-height: 26px;
     pointer-events: none;
   }
 
-  .folder {
-    .folder-header {
-      background: $white;
-      cursor: pointer;
-      overflow: hidden;
-      padding-left: 14px;
-      height: $dimension-height;
-
-      &:hover {
-        background: $hover;
-      }
-
-      .label {
-        @include ellipsis;
-        display: block;
-        padding: 7px 0.15em;
-      }
-
-      .folder-icon {
-        top: 4px;
-        left: -2px;
-        width: 19px;
-        float: left;
-
-        svg {
-          width: 19px;
-
-          path {
-            fill: hsla(0, 0, 0, 0.35);
-          }
-        }
-      }
-    }
-
-    .folder-items {
-      padding-left: 22px;
-
-      .row {
-        &:last-child {
-          margin-bottom: $searchable-folder-last-child-margin;
-        }
-      }
-    }
-
-    .closed {
-      display: none;
-    }
-  }
 
   .hidden {
     display: none;
